--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -48,11 +48,12 @@
     #profileTitle {
       @include flexSpaceAround(column);
       // justify-content: flex-start;
-      min-height: 100%;
+      // height: 100%;
       width: 80%;
+      min-height: 100%;
       // height: 80vh;
       // height: fit-content;
-      margin-bottom: 70px;
+      // margin-bottom: 70px;
 
       @media screen and (max-width: $break-mobile) {
         width: 100%;
@@ -66,7 +67,7 @@
         width: 20vw;
         min-width: 175px;
         border-radius: 50%;
-        margin-top: 30px;
+        margin-top: 10px;
 
         img {
           height: 90%;
@@ -78,14 +79,14 @@
 
       #profileContent {
         height: fit-content;
-        min-height: 50%;
+        // min-height: 50%;
         width: 70%;
         min-width: 220px;
         @include flexSpaceAround(column);
         justify-content: flex-start;
 
         @media screen and (max-width: $break-tablet) {
-          min-height: 60%;
+          // min-height: 70%;
         }
 
         // overflow-y: auto;
@@ -157,6 +158,8 @@
 
       @media screen and (max-width: $break-tablet) {
         width: 90%;
+        margin-top: 0;
+        // margin-top: 60px;
       }
 
       #profileImages {
