--- a/src/components/ProfilePost/ProfilePost.scss
+++ b/src/components/ProfilePost/ProfilePost.scss
@@ -7,7 +7,7 @@
   border: 1px solid $brand-color;
   // padding: 10px;
   border-radius: 1px;
-  padding: 5px;
+  // padding: 5px;
   @include flexSpaceBetween(column);
   box-shadow: 0px 0px 3px 3px #e9e9e9;
 
